--- a/config.toml
+++ b/config.toml
@@ -248,7 +248,13 @@ disable404 = true
 	    url = "https://www.uni-kl.de/en/"
 	    tagline = "Through my studies I worked as a teaching assistant and tutor for various chairs within the mechanical engineering department of the Technical University of Kaiserslautern and the University of Victoria. Teaching and organizing tutorials and laboratories from engineering mechanics, to fluid mechanics to wind energy improved my public speaking and knowledge transfer ability. Work at the Institute for Composite Materials and supervising capstone design projects strengthened my project management skills and mechanical design capabilities."
 	
+	
 	    [[params.projects.list]]
+	    title = "Entrpreneurship Playground"
+	    url = "https://www.uvic.ca/innovation/"
+	    tagline = "During the first three years of my Phd, I held the office of graduate student representative for the mechanical engineering department where I joined the finance committee. As part of my responsibilities, I oversaw the annual budget and planned, together with staff and managers, the renovation of the university’s “Grad House” restaurant."
+	 
+		[[params.projects.list]]
 	    title = "Entrpreneurship Playground"
 	    url = "https://www.uvic.ca/innovation/"
 	    tagline = "Together with the Coast Capital Innovation Centre and fellow students, we organized several events to promote student entrepreneurship at the University of Victoria."
