--- a/config.toml
+++ b/config.toml
@@ -282,6 +282,16 @@ disable404 = true
 		intro = ""
 		
 		[[params.publications.list]]
+		title = "Airborne wind energy trajectory optimization using realistic wind speed profiles"
+		url = "https://doi.org/10.5281/zenodo.3357152"
+		tagline = "Wind Energy Science Conference 2019"
+		
+		[[params.publications.list]]
+		title = "Mesoscale model based techniques for LiDAR wind speed measurement gap-filling"
+		url = "https://doi.org/10.5281/zenodo.3357147"
+		tagline = "Wind Energy Science Conference 2019"
+
+		[[params.publications.list]]
 		title = "Parametric AWES Sizing Study Using Mesoscale Wind Profiles"
 		url = "https://doi.org/10.4233/uuid:57fd203c-e069-11e9-9fcb-441ea15f7c9c"
 		tagline = "Airborne Wind Energy Conference 2019"
@@ -290,9 +300,8 @@ disable404 = true
 		title = "Coupled Kite-Ground Station Simulink Model for Optimal FlightPath Following Assessment"
 		url = "https://doi.org/10.4233/uuid:57fd203c-e069-11e9-9fcb-441ea15f7c9c"
 		tagline = "Airborne Wind Energy Conference 2019"
-
 	  
-	  [[params.publications.list]]
+		[[params.publications.list]]
 		title = "Improving mesoscale wind speed forecasts using lidar-based observation nudging for airborne wind energy systems"
 		url = "https://doi.org/10.5194/wes-4-563-2019"
 		tagline = "Wind Energy Science, Volume 4, Issue 4, October 2019"
