--- a/config.toml
+++ b/config.toml
@@ -100,11 +100,11 @@ disable404 = true
         url = "https://github.com/markussommerfeld"
         title = "markussommerfeld"
     
-        [[params.contact.list]]
-        class = "twitter"
-        icon = "fa-twitter"
-        url = "https://twitter.com/Dudegoesplaces"
-        title = "@Dudegoesplaces"
+        #[[params.contact.list]]
+        #class = "twitter"
+        #icon = "fa-twitter"
+        #url = "https://twitter.com/Dudegoesplaces"
+        #title = "@Dudegoesplaces"
     	
     	[[params.contact.list]]
         class = "researchgate"
@@ -187,8 +187,6 @@ disable404 = true
 		summary = "Researcher, Engineer and Futurist driven by curiosity motivated by improving quality of life for everybody and exited about technology. <br/> As a researcher I aim to reduce the impact of climate change through offering dependable, sustainable energy at a lower cost. As an engineer I took responsibility organizing and executing certification test as well as independently solving interesting design challenges to quickly provide outstanding results. As a futurist I am hopeful that we will be able to overcome our challenges by providing better, sustainable services while improving the quality of life for everyone."    
 
 
-
-
 	# Experiences section
 	[params.experiences]
 	    enable = true
@@ -202,7 +200,7 @@ disable404 = true
 	    details = "Determined the wind energy potential of innovative, new airborne wind energy systems and tall wind turbines. Collaborated with international research institutes, universities and companies. Evaluated LiDAR measurements, simulated wind weather models, optimized trajectories, analyzed results. Published in high-impact journal and presented at several conferences and seminars."
 
 	    [[params.jobs.list]]
-	    position = "Project Engineer"
+	    position = "Engineering Consultant: various Projects"
 	    dates = "2018 - 2020"
 	    company = "University of Victoria, BC, Canada"
 	    details = "Consulted several start-ups and research groups in their development of novel designs.These projects were partially funded through NSERC Engage Grant and NRC-IRAP grants. Rewrite this!"
