--- a/config.toml
+++ b/config.toml
@@ -196,13 +196,13 @@ disable404 = true
 	    [[params.jobs.list]]
 	    position = "PhD in Mechanical Engineering"
 	    dates = "2015 - 2020"
-	    company = "University of Victoria, BC, Canada"
+	    company = "University of Victoria, Institute for Integrated Energy Systems, Victoria BC, Canada"
 	    details = "Determined the wind energy potential of innovative, new airborne wind energy systems and tall wind turbines. Collaborated with international research institutes, universities and companies. Evaluated LiDAR measurements, simulated numerical weather predictions, optimized trajectories of tethered aircraft and performed a sizing study. Published in high-impact journals and presented at international conferences and seminars."
 
 	    [[params.jobs.list]]
 	    position = "Engineering Consultant: various Projects"
 	    dates = "2018 - 2020"
-	    company = "University of Victoria, BC, Canada"
+	    company = "University of Victoria, Institute for Integrated Energy Systems, Victoria BC, Canada"
 	    details = "Consulted several start-ups and local companies about the development of novel wind energy technologies by sharing technical knowledge, assessing feasibility and performing concept studies. These projects were partially funded through NSERC Engage Grant and NRC-IRAP grants."
 
 	
