added icon interest

--- a/config.toml
+++ b/config.toml
@@ -161,18 +161,25 @@ disable404 = true
     
         [[params.interests.list]]
         interest = "Family"
+		icon = "fa-map-marker"
+
 
         [[params.interests.list]]
         interest = "Crossfit"
+		icon = "fa-map-marker"
+
     
         [[params.interests.list]]
         interest = "Technology"
-		
+		icon = "fa-map-marker"
+
         [[params.interests.list]]
         interest = "Entrepreneurship"
-		
+		icon = "fa-map-marker"
+
 	   [[params.interests.list]]
         interest = "Cooking & Eating"
+		icon = "fa-map-marker"
 
 # Main body sections
 
